--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0 auto;
     padding: 40px 0px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .grid-container {
@@ -44,3 +44,4 @@ body {
     background: black;
     transition: 2s;
 }
+
